# altermagnets

./: .gitignore  Makefile  README.md  pyproject.toml
src/: config.httkweb  config_dynamic.httkweb
src/content/: 404.md  about.md  highlights.md  how-to-cite.md  index.md  material.md  search.md
src/functions/: formula_katex.py  get_material.py  init.py  input_sanitize.py  search_materials.py
src/static/: app.js  styles.css
src/templates/: 404.html.j2  base_default.html.j2  default.html.j2  detail_page.html.j2  highlights.html.j2  material_details.html.j2  search_page.html.j2  search_results.html.j2  welcome.html.j2
tests/: test_detail_assets_lib.py  test_formula_katex.py  test_get_material.py  test_init.py  test_input_sanitize.py  test_search_materials.py  test_smoke.py
tools/: analyze_data_integrity.py  fix_screening_magndata_ids.py
