[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example_website_httk"
version = "0.1.0"
description = "Example of how to use httk as a static site generator (that can be extended with a backend)."
readme = "README.md"
license = "AGPL-3.0+"
requires-python = ">=3.11"
authors = [{ name = "Rickard Armiento", email = "gitcommits@armiento.net" }]
dependencies = [
  "duckdb>=1.1",
  "httk-web @ git+https://github.com/httk/httk-web@develop",
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
]
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "black",
  "ruff",
  "isort",
  "pyright",
  "mypy"
]
detail-generation = [
  "matplotlib",
  "pymatgen",
  "ase",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"
extend_skip_glob = ["src/data/**"]

[tool.ruff]
target-version = "py311"
src = ["src"]
extend-exclude = ["src/data"]
force-exclude = true

[tool.black]
target-version = ["py311"]
line-length = 120
skip-string-normalization = true
force-exclude = '''
/src/data/
'''

[tool.pyright]
pythonVersion = "3.11"
include = ["src/functions", "serve_dynamic.py", "publish_static.py"]
exclude = ["src/data"]
extraPaths = ["src"]  
reportMissingImports = true

[tool.mypy]
python_version = "3.11"
files = ["src/functions", "serve_dynamic.py", "publish_static.py"]
mypy_path = ["src", "src/functions"]
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
exclude = ['^src/data/']

[[tool.mypy.overrides]]
 module = ["yaml", "markdown", "docutils", "docutils.*", "duckdb", "httk.web", "httk.web.*"]
ignore_missing_imports = true
